[package]
name = "subscriber"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust- lang.org/cargo/reference/manifest.html
[dependencies]
crosstown_bus = "0.8.1"
futures = "0.3"
borsh = "1.4.0"
borsh-derive = "1.4.0"
tokio = {version="1.21.2", features=["full"]}